--- a/src/Panacea.Modules.DisplayMessages/Panacea.Modules.DisplayMessages.csproj
+++ b/src/Panacea.Modules.DisplayMessages/Panacea.Modules.DisplayMessages.csproj
@@ -97,17 +97,9 @@
     <Compile Include="Views\RtfViewer.xaml.cs">
       <DependentUpon>RtfViewer.xaml</DependentUpon>
     </Compile>
-    <Page Include="UserControl1.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
     <Compile Include="DisplayMessagePlugin.cs" />
     <Compile Include="Models\DisplayMessageData.cs" />
     <Compile Include="Models\DisplayMessageModel.cs" />
-    <Compile Include="UserControl1.xaml.cs">
-      <DependentUpon>UserControl1.xaml</DependentUpon>
-      <SubType>Code</SubType>
-    </Compile>
     <Page Include="Views\DisplayMessageSimpleNotification.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -146,16 +138,19 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Panacea.Controls">
-      <Version>0.2.0</Version>
+      <Version>0.2.1</Version>
     </PackageReference>
     <PackageReference Include="Panacea.Core">
-      <Version>8.2.0</Version>
+      <Version>9.0.0</Version>
     </PackageReference>
     <PackageReference Include="Panacea.Models">
       <Version>0.0.5</Version>
     </PackageReference>
     <PackageReference Include="Panacea.Modularity">
       <Version>0.0.2</Version>
+    </PackageReference>
+    <PackageReference Include="Panacea.Modularity.Billing">
+      <Version>3.4.0</Version>
     </PackageReference>
     <PackageReference Include="Panacea.Modularity.UiManager">
       <Version>10.2.0</Version>
